9:44pm 12/2 Clark- Added basic functionality to parse but not validate command line arguments in atm-main.c.
10:22pm 12/2 Clark- Increased the functionality to parse command line arguments in atm-main.c. 
8:11pm 12/3 Clark- Added functionality to send information about the commands from atm to bank.
12:34am 12/4 Clark- Symetrically encrypting from atm->bank but not decrypting. 
12:12am 12/5 Clark- Decrypting at bank but having some small issues parsing the result. 
2:18am (fml) 12/8 Matthew - Converting string to ull for account balance and adding some int-overflow countermeasures. 
    Create, deposit, and withdraw updated (withdraw still untested i gotta go to bed man D:). 
    Basic functionality works but I can make it better (decimals are messed up rn)
11:45pm 12/10 Clark- Did the arg parsing fixes and started the repeat attack protection
4:23pm 12/11 Clark- Finished repeat attack protection.
2:34am 12/12 Matthew -- Finished behavior for different commands in bank-main.c. Can confirm it works by output of
    printLinkedList(), but still need to work on the final_value string being accurate to the last transaction made. this 
    shouldn't be too tough tho. I'll go back and wrap that up either tomorrow or monday
2:15pm 12/13 Matthew -- Finished construction of output string for new accounts created -- TODO still need to Converting
    sent_value_of_operation to cents instead of dollars and update everything for that accordingly
2:38am 12/14 Matthew -- FINISHED construction of the output string depending on transaction type, as well as remaining basic 
    functionality for each command (hype). STILL TODO VERY IMPORTANT -- I moved the int overflow protection from bank-main to
    atm-main, to avoid the network socket not closing issue, but now have to find out about how Clark parsed everything in that
    program ("parsing hell"). Not looking forward to that but still hype that it WORKS :D I gotta stop staying up this late